--- a/笔记/03-JS基础语法.md
+++ b/笔记/03-JS基础语法.md
@@ -118,17 +118,17 @@ Boolean()函数
 
 # 2-标识符、关键字、保留字
 
-### 1.标识符
+### 2.1 标识符
 
 标识符： 就是指开发人员为变量、属性、函数、参数取的名字。
 
 - ​	<u>标识符不能是关键字或保留字</u>	
 
-### 2.关键字
+### 2.2 关键字
 
 关键字： 是指JS本身已经使用了的字，不能再用它们充当变量名，方法名
 
-### 3.保留字
+### 2.3 保留字
 
 保留字： 实际上就是预留的“关键字”，意思是现在虽然还不是关键字，但是未来可能会成为关键字，同样不能使用它们充当变量名或方法名。
 
@@ -136,7 +136,7 @@ Boolean()函数
 
 # 3-运算符
 
-### 1.运算符
+### 3.1 运算符
 
 ​		operator 也称操作符，是用来实现赋值，比较和执行运算等功能的符号。
 
@@ -152,7 +152,7 @@ JavaScript中常见的运算符有：
 
 - 赋值运算符
 
-### 2.算数运算符
+### 3.2 算数运算符
 
 ‘+’   ‘-’   ‘ *’  ‘ /’  '%'
 
@@ -170,7 +170,7 @@ console.log(0.3 * 10); ==> 3.000000000001
 
 我们不能直接拿浮点数想比较  尽量避开浮点数
 
-### 3.递增递减运算符
+### 3.3 递增递减运算符
 
 递增++
 
@@ -190,7 +190,7 @@ console.log(0.3 * 10); ==> 3.000000000001
 
 
 
-### 4.比较运算符
+### 3.4 比较运算符
 
 ​		比较运算符（关系运算符）是两个数据进行比较时所使用的运算符，比较运算后，会返回一个**布尔值**（true/false）作为比较运算的结果。
 
@@ -198,7 +198,7 @@ console.log(0.3 * 10); ==> 3.000000000001
 >
 > + 我们程序里面的等于号 == 默认转换数据类型 会把字符串型的数据转换为数字型
 
-### 5.逻辑运算符
+### 3.5 逻辑运算符
 
 ​		逻辑运算符是用来进行布尔值运算的运算符，其返回值也是布尔值。后面开发中经常用于多个条件的判断
 
@@ -227,7 +227,7 @@ console.log(0.3 * 10); ==> 3.000000000001
 
 
 
-### 6.赋值运算符
+### 3.6 赋值运算符
 
 ​		用来把数据赋值给变量的运算符
 
@@ -239,7 +239,7 @@ console.log(0.3 * 10); ==> 3.000000000001
 
 
 
-### 7.运算符优先级
+### 3.7 运算符优先级
 
 > ​	()   >  一元运算符 ++、-- 、！  >   算数运算符  * / %  + -  >  关系运算符 > >= < <=     >     相等运算符 == != === !==      >   逻辑运算符  先&& 后||     >    赋值运算符 =      >       逗号运算符 ,
 >
@@ -253,11 +253,11 @@ console.log(0.3 * 10); ==> 3.000000000001
 
 ​		流程控制就是控制 我们的代码按照什么结构顺序来执行
 
-### 1.顺序结构
+### 4.1 顺序结构
 
 ​		最简单最基本的流程控制，按照代码的先后顺序依次执行
 
-### 2.分支流程控制
+### 4.2 分支流程控制
 
 ​		从上到下执行代码的控制中，根据不同的条件，执行不同的代码，从而得到不同的效果
 
@@ -361,7 +361,187 @@ console.log(0.3 * 10); ==> 3.000000000001
 
     ⑤当分支比较多的情况下，switch 语句的执行效率比较高，而且结构更清晰
 
-### 3.循环流程控制
+### 4.3 循环流程控制
+
+>  循环的目的： 重复执行某些代码
+
+#### 1.for循环
+
+​		一组被重复执行的语句被称之为 循环体， 能否继续重复执行，取决于循环的终止条件。由循环体及循环的终止条件组成的语句，被称之为 循环语句。
+
+
+
+- 语法结构：
+
+  ​	for(初始化变量; 条件表达式; 操作表达式){
+
+  ​		循环体
+
+  }
+
+  `for (var i = 0; i < 100; i++) {`
+
+  ​      `console.log(i);`
+
+  ​    `}`
+
+  
+
+  `// 例：求1~100的累加和.`
+
+  `var num = 0;`
+
+  ​    `for(var i = 0; i <= 100; i++) {`
+
+  ​      `num +=i;`
+
+  ​    `}`
+
+​    `console.log("num = "+num);`
+
+
+
+​	`双重for循环`
+
+​		`for(var i =0; i < 10; i++){`
+
+​			`for(var j = 0; j < i; j++){`
+
+​				`//循环体`		
+
+​		`}`
+
+`}`
+
+
+
+#### 2.while循环
+
+​		
+
+> while (条件表达式){
+>
+> ​		// 循环体
+>
+> ​		//当条件表达式的结果为true时，则执行循环体 否则 退出循环
+>
+> }
+
+<script>
+        var num = 1;
+        while (num <= 100){
+            console.log(num);
+            num++;
+        }
+    </script>
+
+
+
+#### 3.do while 循环
+
+​		do while 该循环会先执行一次代码块，然后对条件表达式进行判断，如果条件为真，就会重复执行循环体，否则退出循环
+
+<script>
+    do{
+		//循环体
+        //do while 循环体至少执行一次
+    }while(条件表达式)
+</script>
+
+
+
+- + continue 关键字
+
+    用于立即跳出本次循环，进行下一次循环
+
+  + break      关键字
+
+    用于立即跳出整个循环（循环结束)
+
+
+
+# 5- 命名规范以及语法格式
+
+#### 标识符命名规范
+
+- 变量、函数的命名必要要有意义
+
+- 操作符的左右两侧尽量有空格
+- 单行注释 
+- 其它规范（＋空格）
+
+
+
+# 6-数组
+
+### 6.1 数组的概念
+
+> 数组就是一组数据的集合, 其中每个数据被称为元素, 在数组中可以存放任意类型的元素, 数组是一种将一组数据存储在单个变量名下的优雅方式.
+
+### 6.2 创建数组
+
+<script>
+    	//1.利用new 创建数组
+        var arr1 = new Array();
+    	//2.利用数组字面量创建数组
+    	var arr2 = []; 
+    	var arr3 = [1,2,3,4]
+        //[]里面可以直接存放任意类型的数据
+        // 数组元素 之间用逗号分隔
+</script>
+
+### 6.3 获取数组元素
+
+##### 6.3.1 数组的索引
+
+​		索引（下标） : 用来访问数组元素的序号（数组元素的索引从 0 开始）
+
+<script>
+    var arr = [1,2,3,4];
+    console.log(arr[1]); // 
+    console.log(arr[5]); // 如果数组里面没有这个元素，那么输出的结果是 undefined 
+</script>
+
+
+
+### 6.4 遍历数组
+
+> 遍历： 就是把数组中的每个元素都访问一遍
+
+<script>
+    var arr2 = [1,2,3,4,5,6,,7,8];
+    for(var i = 0; i < arr2.length; i++) {
+            console.log(arr2[i]);
+        }
+</script>
+
+- 数组长度： 元素的个数
+
+   	数组名.length   ==>  动态检测数组元素的个数
+
+
+
+### 6.5 数组中新增元素
+
+##### 6.5.1 通过修改length 长度新增数组元素
+
+- 可以通过修改length长度来实现数组扩容的目的
+- length 属性是可读写的
+
+##### 6.5.2 新增数组元素 新增索引号 追加数组元素
+
+<script>
+    var arr = [1,2,3,4];
+    console.log(arr);
+    arr[4] = 5;
+    console.log(arr);
+    arr[1] = 6;   // 这里的arr[1] 原来的2会被覆盖掉
+    console.log(arr)
+    
+    //如果直接给数组名添加元素 否则里面的数组元素就都没有了
+    arr = 'hha';
+    
+</script>
 
 
 
@@ -371,5 +551,4 @@ console.log(0.3 * 10); ==> 3.000000000001
 
 
 
-###  
 
