--- a/笔记/03-JS基础语法.md
+++ b/笔记/03-JS基础语法.md
@@ -537,18 +537,246 @@ console.log(0.3 * 10); ==> 3.000000000001
     console.log(arr);
     arr[1] = 6;   // 这里的arr[1] 原来的2会被覆盖掉
     console.log(arr)
-    
+
     //如果直接给数组名添加元素 否则里面的数组元素就都没有了
     arr = 'hha';
-    
+
 </script>
 
 
 
+# 7-函数
+
+> 函数就是封装了一段可被重复调用执行的代码块，通过此代码块可以实现大量代码的重复使用
+
+<script>
+    function 函数名(参数){
+        //代码块
+    }
+</script>
+
+### 7.1 函数的使用
+
+- 函数的声明
+
+  ​	//函数名一般是动词
+
+  ​	function 函数名(){
+
+  }
+
+- 函数的调用
+
+  ​	//函数只声明，不调用的话，自己不执行
+
+  函数名（）;
+
+### 7.2 函数的封装
+
+> ​	函数的封装就是一个或者多个功能通过 函数的方式封装起来，对外只提供一个简单的函数接口。（打包）
 
 
 
+<script>
+    // num1~num2 的和
+    function getSum(num1,num2) {
+        var sum = 0;
+        for (var i = num1; i < num2; i++) {
+            sum += i;
+        }
+        console.log(sum);
+    }
+</script>
 
+
+
+### 7.3 函数的参数
+
+> 函数的参数可以分为 形参 和 实参。
+>
+> 函数声明：function 函数名(形参1，形参2){}   //形参接受实参的，类似于变量  ==>  形参1 = 实参1；
+>
+> 函数调用：函数名（实参1，实参2）;
+
+- 函数的参数可以有（个数不限)，也可以没有
+
+
+
+<!--参数的作用： 在函数内部某些值不固定，我们可以通过调用函数时传递不同的值进去-->
+
+
+
+- - 函数形参实参多个数匹配
+
+<script>
+        function getSum(num1, num2){
+            console.log(num1 + num2);
+        }
+        // 1. 如果实参的个数和形参的个数一致，则正常输出结果
+        getSum(1,3);
+
+
+
+        //2. 如果实参的个数大于形参的个数， 会取到形参的个数
+        getSum(1,3,2);
+
+        //3. 如果实参的个数小于形参的个数
+        形参可以看做是不用声明的变量 num2 是一个变量但是			没有接受值， 结果就是undefined
+        getSum(1);  // NaN
+
+        // 建议尽量让形参和实参的个数相等
+    </script>
+
+
+
+### 7.4 函数的返回值
+
+##### 7.4.1 return 语句
+
+> return 语句可以将函数的返回值 返回给调用者
+
+<script>
+    // 1. 求a + b 的和
+        function getSum(a, b){
+            return a + b;
+        }
+        console.log(getSum(1,2));
+
+```html
+    // 2. 求两个数的最大值
+    function getMax(a, b) {
+        return a > b ? a : b;
+    }
+    alert(getMax(2,3));
+
+    // 3. 求数组中的最大值
+    function getArrMax(arr) {
+        var max = arr[0];
+        for (var i = 1; i < arr.length; i++){
+            max = max > arr[i] ? max : arr[i];
+        }
+        return max;
+    }
+    var arr = [1,6,4,7,2,4,67,24,534,12,87,24];
+    var m = getArrMax(arr);  // 在实际开发中， 我们经常用一个变量名来接受函数返回的结果
+    alert('该数组中的最大值是：'+m);
+```
+</script>
+
+##### 7.4.2 return 终止函数
+
+> ​	函数体里面， return 后面的代码不会被执行。
+
+##### 7.4.3 return 的返回值
+
+> ​	return 只能返回一个值， 如果用逗号隔开多个值， 以最后一个为准。
+>
+> - 如果想要输出多个结果，可以采用输出数组的方式来实现
+>
+> <script>
+>     //比如想要输出a与b 的加减乘除结果
+>     function getResult(a,b) {
+>         return [a + b, a - b, a * b, a / b];
+>     }
+>     var abResult = getResult(3,2);
+>     alert(abResult);
+> </script>
+>
+> - 如果函数有返回值，那就返回该值，如果没有返回值，那么返回undefined
+
+##### 7.4.4 break, continue, return的区别
+
+- break:	结束当前的循环体
+- continue：   跳出本次循环，继续执行下次循环
+- return：  不仅可以退出循环，还能返回return 值，同时还可以结束当前的函数体内的代码。
+
+### 7.5 arguments的使用
+
+> ​		只有函数有arguments， 每个函数都内置了这个arguments
+>
+> ​		当我们不确定有多少个参数传递的时候，可以用arguments来获取， 在JavaScript中，arguments实际上它是当前函数的一个内置对象。所有函数都内置了一个arguments对象，arguments对象中存储了传递的所有实参。
+
+arguments 展示形式是一个伪数组， 因此可以进行遍历。伪数组具有以下特点：
+
+- 具有length 属性
+- 按索引方式存储数据
+- 没有真正数组的一些方法，不具有数组的push,pop等方法
+
+
+
+### 7.6 函数互相调用
+
+### 7.7 函数的两种声明
+
+- 1.利用函数关键字自定义函数（命名函数）
+
+- 2.函数表达式 （匿名函数）
+
+  `var 变量名 = function(){};`
+
+  `var fun = function(){	// fun是变量名，不是函数名`
+
+  ​		`//代码块`
+
+  `}`
+
+  `fun();`
+
+  `// 函数表达式声明方式跟声明变量差不多，只不过变量里面存的是值 而 函数表达式里面存的是函数`
+
+  `// 函数表达式也可以传递参数`
+
+
+
+# 8-作用域
+
+###  8.1作用域概述
+
+> ​		通常来说，一段程序代码中所用到的名字并不总是有效和可用的，而限定这个名字的可用性代码范围 就是这个名字的作用域。 作用域的使用提高了程序逻辑的局部性，减少了名字冲突。
+
+- js的作用域（es6）:全局作用域    局部作用域
+  - 全局作用域： 整个script 标签 或者是一个单纯的js文件
+  
+  - 局部作用域(函数作用域)：在函数内部就是局部作用域， 这个代码的名字只在函数内部起效果和作用。
+  
+### 8.2变量的作用域
+
+     根据作用域的不同，变量可以分为全局变量 和 局部变量
+
+<!--全局变量：   如果在函数内部没有声明，直接赋值的变量也属于全局变量-->
+
+<!--局部变量：	函数的形参也可以看做是局部变量-->
+
+- 从执行效率看全局变量和局部变量
+  - 全局变量只有浏览器关闭的时候才会销毁，比较占内存资源
+  - 局部变量  当我们程序执行完毕就会销毁， 比较节约内存资源
+
+
+
+> ​	js中没有块级作用域  js的作用域： 全局作用域 局部作用域 现阶段我们js 没有块级作用域
+>
+> ​	js在es6的时候新增的块级作用域
+>
+> ​	块级作用域： {}      if{}   for{}
+
+### 8.3 作用域链
+
+> - 只要是代码，就至少有一个作用域
+> - 写在函数内部的局部作用域
+> - 如果函数中还有函数，那么在这个作用域中就又可以诞生一个作用域
+> - 根据在内部函数可以访问外部函数变量的这种机制，用链式查找决定哪些数据能被内部函数访问，就称为  作用域链
+
+<script>
+    // 作用域链：  内部函数访问外部函数的变量，采取的事链式查询的方式来决定取哪个值 这种结构我们称为作用域链  （就近原则） 一层一层往外找  找到为止
+    
+    var num = 10;
+    function fn(){ // 外部函数
+		var num = 20;
+        function fun(){  //内部函数
+            console.log(num);
+        }
+    }
+</script>
 
 
 
