--- a/笔记/03-JS基础语法.md
+++ b/笔记/03-JS基础语法.md
@@ -768,15 +768,375 @@ arguments 展示形式是一个伪数组， 因此可以进行遍历。伪数组
 
 <script>
     // 作用域链：  内部函数访问外部函数的变量，采取的事链式查询的方式来决定取哪个值 这种结构我们称为作用域链  （就近原则） 一层一层往外找  找到为止
-    
+
     var num = 10;
     function fn(){ // 外部函数
-		var num = 20;
+    	var num = 20;
         function fun(){  //内部函数
             console.log(num);
         }
     }
 </script>
 
+# 9-欲解析
 
+<script>
+    //1.
+    console.log(num); // 报错
+    //2.
+    console.log(num);
+    var num = 10; // undefined 
+    //3. 11
+    fn();
+    function fn(){
+        console.log(11);
+    }
+    //4.   //报错
+    fun();
+    var fun = function(){
+		console.log(22);
+    }
+</script>
+
+> ​	1.我们js引擎运行js 分为两步 ：  欲解析  代码执行
+>
+> ​		（1）欲解析 js引擎会把js 里面所有的var 还有 function 提升到当前作用域的最前面。
+>
+> ​		（2）代码执行 按照代码书写的顺序从上往下执行
+>
+> ​	2.欲解析分为 ： 变量欲解析（变量提升） 和函数欲解析 （函数提升）
+>
+> ​	  	(1)变量提升 就是把所有的变量声明提升到当前作用域的前面
+>
+> ​		  (2)函数提升 就是把所有函数的声明提升到当前作用域的最前面 不调用函数   （函数表达式 调用必须写在函数表达式的下面）
+
+
+
+# 10-对象
+
+### 10.1对象
+
+> 对象是一个具体的事物
+>
+> 在JavaScript中， 对象是一组无序的相关属性和方法的集合，所有的事物都是对象，例如： 字符串，数值，数组，函数等
+>
+> 对象是由**属性**和**方法**组成的
+>
+> - 属性： 事物的特征，在对象中用属性来表示（常用名词）
+> - 方法： 事物的行为，在对象中用方法来表示（常用动词）
+
+### 10.2 为什么需要对象
+
+​		保存一个值时，可以使用变量 ，保存多个值（一组值）时，可以使用数组。因此需要对象来表达结构更清晰，更强大的信息。
+
+- 变量、属性、函数、方法的区别
+  - 变量和属性的相同点： 它们都是用来存储数据的
+    - 变量 单独声明并赋值  使用的时候直接写变量名 单独存在
+    - 属性 在对象里面不需要声明的 使用的时候必须是 对象名.属性
+  - 函数和方法的相同点 都是实现某种方法 做某件事
+    - 函数是单独声明的 并且调用的 函数名（）单独存在的
+    - 方法 在对象里面 调用的时候  函数名.方法名()
+
+### 10.3 创建对象
+
+##### 10.3.1 利用字面量创建对象
+
+​		对象字面量： 
+
+​	`var person = {`
+
+​	`uname: 'zs',`
+
+​	`age : 11,`
+
+​	`sayHi : function() {`
+
+​		`console.log('hello');`
+
+`			}`
+
+`}`
+
+`console.log(person.uname);`
+
+`console.log(person['age']);`
+
+##### 10.3.2 new Object 创建对象
+
+`var obj = new Object();`
+
+`obj.uname = 'zs';`
+
+`obj.age = 11;`
+
+`obj.sayHi = function() {`
+
+​		`console.log('hi');`
+
+`}`
+
+`console.log(obj.age);`
+
+`obj.sayHi();`
+
+##### 10.3.3 利用构造函数创建对象
+
+> 之前两种每次只能创建一个对象 里面很多的属性和方法是大量相同的 我们只能复制
+>
+> 因此我们可以利用函数的方法 重复这些相同的代码 我们就把这个函数称为 构造函数
+>
+> 因为这个函数不一样 ， 里面封装的不是普通代码， 而是 对象
+>
+> 构造函数就是把我们对象里面的一些相同代码的属性和方法抽象出来封装到函数里面
+
+<script>
+     // function 构造函数名() {
+        //     this.属性 = 值;
+        //     this.方法 = function() {}
+        // }
+        // new 构造函数名();
+
+        function Star(uname, age, sex) {   
+            this.uname = uname;
+            this.age = age;
+            this.sex = sex;
+            this.sing = function(sang) {
+                console.log(sang);
+            }
+        }
+        var ldh =  new Star('刘德华',18,'男'); // 调用函数返回的是一个对象
+        console.log(ldh.uname);
+    	ldh.sing('冰雨');
+    	var gfc = new Star('郭富城',22,'男');
+    	gfc.sing('hello');
+        // 1.构造函数名  首字母大写
+        // 2.构造函数不需要 return 就可以返回结果
+        // 3.我们调用构造函数 必须使用new
+    	// 4.我们只要new Star() 调用函数就创建一个对象 ldh();
+        // 5.我们的属性和方法前面必须添加this.
+- 构造函数：泛指的某一大类  类似于java里面的类（class)
+- 对象： 是一个具体的事物
+- 我们利用构造函数创建对象的过程 我们称为对象的实例化
+
+
+
+- new 关键字执行过程
+
+  - new 构造函数可以在内存中创建了一个空的对象
+
+  - this 就会指向刚才创建的空对象
+
+  - 执行构造函数里面的代码 给这个空对象添加属性和方法
+
+  - 返回这个对象（所以构造函数里面不需要return ）
+
+    
+
+
+
+### 10.4	遍历对象
+
+​		for in遍历对象
+
+<script>
+        var obj = {
+            name: 'zs',
+            age: 18,
+            sex: '男'
+        }
+        for (var k in obj) {
+            console.log(k); //k是变量
+            console.log(obj[k]); // 得到的是里面的属性值  obj[k]  k 不加引号
+        }
+    // 我们使用 for in 里面的变量名：  k  key 
+    </script>
+
+
+
+# 11- 内置对象
+
+### 11.1 内置对象
+
+- JavaScript 中的对象分为3种： 自定义对象、内置对象、浏览器对象
+- 自定义和内置对象是js基础内容， 属于ECMAScript; 第三个浏览器对象属于我们js独有的
+- 内置对象就是指 js 语言自带的一些对象， 这些对象供开发者使用，并提供了一些常用的或是最基本而必要的功能（属性和方法）
+
+### 11.2 查文档
+
+​		MDN   W3C
+
+### 11.3 Math 对象
+
+​		Math数学对象，不是一个构造函数，它具有数学常数和函数的属性和方法。跟数学相关的运算（求绝对值，取整，最大值等）可以使用math的成员，所以我们不需要new来调用 而是直接使用其属性,方法。
+
+- Math.PI
+- Math.max()
+- Math.round()   // .5 都往大了取  -1.5  ==> -1
+- Math.abs()
+- Math.floor()   // 向下取整
+- Math.ceil()   //向上取整
+- Math.random();
+  - 1. random返回一个随机的小数 0 <= x <1
+
+
+
+### 11.4 日期对象
+
+​		Date（） 日期对象 是一个构造函数  必须使用new 来调用创建我们的日期对象  进行实例化才能使用。
+
+​		Date 实例用来处理日期和时间
+
+<script>
+    var arr = new Array();
+    var obj = new Object();
+    // 1. 使用Date	如果没有参数 返回当前系统的当前时间
+    var date = new Date();
+    console.log(date);
+    // 2. 参数常用的写法  数字型 2020,10,26 或者是 字符串型 '2020-10-26 8:8:8'
+    var date2 = new Date('2020-10-26 8:8:8');
+    var date3 = new Date(2020,10,26);
+    console.log(date2);
+    console.log(date3);  // 返回的月份比实际写的大1
+
+    var year1 = date.getFullYear();
+    var month1 = date.getMonth() + 1;// 月份记得 +1
+    var date1 = date.getDate(); 
+    var day1 = date.getDay(); // 星期 0123456
+    
+    //封装一个 具体时分秒
+    function getTime() {
+            var date = new Date();
+            var h = date.getHours();
+            var m = date.getMinutes();
+            var s = date.getSeconds();
+        //  为了使格式统一好看，让小于10的数前面补0
+            h = h < 10 ? '0' + h  : h;
+            m = m < 10 ? '0' + m : m;
+            s = s < 10 ? '0' + s : s;
+            return h + ':' + m + ':' + s;
+        }
+        console.log(getTime());
+</script>
+
+- 获取Date 总的毫秒数 (时间戳)
+  - 不是当前时间的毫秒数， 而是距离 1970.7.1过了多少毫秒
+    - 1.通过  valueOf()   getTime()
+
+
+
+### 11.5 数组对象
+
+<script>
+        //创建数组的两种方式
+        // 1. 利用数组字面量
+        var arr = [1,2,3];
+        console.log(arr[0]);
+    	// 2. 利用new Array();
+        var arr1 = new Array(); // 创建了一个空的数组
+        var arr2 = new Array(2); // 代表数组的长度为		2  里面有两个空的数组元素
+        console.log(arr1);
+        console.log(arr2);
+        var arr3 = new Array(2,3); // 这样写表示： 里面有两个数组元素 分别是 2和 3
+
+- 检测是否为数组
+
+  1. `// instanceof 运算符 它可以检测是否为数组`
+
+     ​    `var arr = [];`
+
+     ​    `console.log(arr instanceof Array);`
+
+     ​    `var arr1 = {};`
+
+     ​    `console.log(arr1 instanceof Array);`
+
+  2. `// Array.isArray(); // H5 里面新增的方法 ie9以上版本支持`
+
+     ​    `console.log(Array.isArray(arr1));`
+
+     ​    `console.log(Array.isArray(arr));`
+
+- 添加删除数组元素的方法
+
+  - `//1. push() 在我们数组的末尾 添加一个或者多个数组元素 push 推`
+
+    ​    `// (1) push 是可以给数组追加新的元素`
+
+    ​    `// (2) push() 参数可以直接写`
+
+    ​    `// (3) push() 完之后 返回的结果是新数组的长度`
+
+    ​    `// (4) 原数组也会发生变化`
+
+    ​    `var arr = [1,2,3];`
+
+    ​    `// arr.push(4);`
+
+    ​    `console.log(arr.push(5, 'pink'));`
+
+    ​    `console.log(arr);`
+
+    
+
+    ​    `//2. unshift 在我们数组的开头 添加一个或者多个数组元素`
+
+    ​    `// (1) unshift 是可以给数组追加新的元素`
+
+    ​    `// (2) unshift() 参数可以直接写`
+
+    ​    `// (3) unshift() 完之后 返回的结果是新数组的长度`
+
+    ​    `// (4) 原数组也会发生变化`
+
+    ​    `console.log(arr.unshift('red'));`
+
+    ​    `console.log(arr);`
+
+    ​    
+
+  - `//3. pop() 删除数组的最后一个元素`
+
+    ​    `// (1) pop 是可以删除数组的最后一个元素 一次只能删除一个元素`
+
+    ​    `// (2) pop() 没有参数`
+
+    ​    `// (3) pop() 执行完毕后，返回的结果是删除的那个元素`
+
+    ​    `// (4) 原数组也会发生变化`
+
+    ​    `console.log(arr.pop()); // 返回值是删除哪个返回哪个`
+
+    ​    `console.log(arr);`
+
+    
+
+    ​    `//4. shift() 删除数组的第一个元素`
+
+    ​    `// (1) shift 是可以删除数组的第一一个元素 一次只能删除一个元素`
+
+    ​    `// (2) shift() 没有参数`
+
+    ​    `// (3) shift() 执行完毕后，返回的结果是删除的那个元素`
+
+    ​    `// (4) 原数组也会发生变化`
+
+    ​    `console.log(arr.shift()); // 返回值是删除哪个返回哪个`
+
+    ​    `console.log(arr);`
+
+- 筛选数组
+
+        
+
+
+
+
+
+
+
+
+
+
+
+​		
 
