--- a/笔记/03-JS基础语法.md
+++ b/笔记/03-JS基础语法.md
@@ -1126,15 +1126,247 @@ arguments 展示形式是一个伪数组， 因此可以进行遍历。伪数组
 
 - 筛选数组
 
-        
+- 数组排序
+
+
+  - <script>
+        // 数组排序
+            //1. 数组翻转
+            var arr = ['hello', 'pink', 			'lala'];
+            arr.reverse();
+            console.log(arr);
+
+            //2. 数组排序 （冒泡排序）
+            var arr1 = [1,4,71,56,0,78,23];
+            arr1.sort(); // 如果这样写的话  只对全		是个位数的管用  多位数的比首位
+            arr1.sort(function(a, b){
+                // return a-b; // 升序的顺序排列
+                return b-a; // 降序的顺序排列
+            });
+            console.log(arr1);
+
+- 返回索引号
+
+
+  - <script>
+            var arr = [2,5,1,6,4,2];
+                console.log(arr.indexOf(2));  
+                	// 返回该元素在数组中的第一个索引
+                console.log(arr.lastIndexOf(2));  
+                	// 返回该元素在数组中最后一个索引
+                console.log(arr.indexOf(3));    
+                	// 如果该元素在数组中不存在 则返回 -1
+    </script>
+
+- 数组去重
+
+
+  - 目标：把旧数组里面不重复的元素选取出来放到新数组中，重复的元素只保留一个
+
+  - 核心算法：我们遍历旧数组，然后拿旧数组元素去查询新数组，如果该元素在新数组里没有则添加，否则不添加
+
+  - 利用indexOf() 来确定新数组有没有该元素
+
+  - <script>
+        function arrayDeduplication(arr) {
+                var newArr = [];
+                for (var i = 0; i < 					arr.length; i++) {
+                    if (newArr.indexOf(arr[i]) 					== -1) {
+                        newArr.push(arr[i]);
+                    }
+                }
+                return newArr;
+            }
+            var arr = [3,2,6,3,7,6,5,3,2,5,1,6,4,9];
+            console.log(arrayDeduplication(arr));
+    </script>
+
+    ​					
+
+- 数组转换为字符串
+
+
+  - toString() 将我们的数组转换为字符串(以逗号分隔)
+
+  - join() 默认以逗号分隔  （分隔符）可以随意设置分隔符
+
+    
+
+- concat 连接两个数组
+
+- splice(n,m);  从第n个开始， 删除m个数组元素  会影响原数组
+
+- slice(n,m); 截取数组： 包含n,不包含m
 
 
 
+### 11.6 字符串对象
+
+- 基本包装类型
+
+  ​	为了方便操作基本数据类型，JavaScript 还提供了三个特殊的引用类型： String  Number  和 Boolean。
+
+  ​	<u>基本包装类型</u>就是把简单的数据类型包装成为复杂数据类型，这样基本数据类型就有了属性和方法。	
+
+- 字符串的不可变
+
+  ​	指： 里面的值不可变，虽然看上去可以改变内容， 但其实是地址变了， 内存中新开辟了一个内存空间
+
+  - 因为我们字符串的不可变所以不要大量的拼接字符串
+
+- 根据字符返回位置
+
+  - 字符串所有的方法，都不会修改字符串本身（字符串是不可变的），操作完成后会返回一个新的字符串
+
+    <script>
+        // 返回字符串的所有位置 以及其出现的次数
+        function getTimes(arr,x) {
+                var index = arr.indexOf(x);
+                var n = 0;
+                while (index != -1) {
+                    n++;
+                    console.log(x + '第' + n + '次出现的位置在索引为' + index + '的位置');
+                    index = arr.indexOf(x, index + 1);
+                }
+                return n;
+            }
+            var arr = [2,4,3,6,8,6,5,2,7,8,3,4,6,4,1,7,8,4];
+            var arr1 = getTimes(arr,4);
+            console.log(arr1);
+    </script>
+
+- 根据位置返回字符（重点）
+
+  1. charAt(索引号)   // 根据字符返回字符
+  2. charCode(索引号)  // 返回索引号对应字符的 ASCII 值
+  3. str[index]    // 获取指定位置处字符  H5新增
+
+<script>
+    //重点案例：   统计字符串中出现次数最多的字符
+     function getStr(str) {
+            var arr1 = [];
+            var arr2 = [];
+            var arr3 = [];
+            for (var i = 0; i < str.length; i++) {
+                if(arr1.indexOf(str.charAt(i)) == -1) {
+                    arr1.push(str.charAt(i));
+                    arr2.push(1);
+                }else{
+                    arr2[arr1.indexOf(str.charAt(i))]++;
+                }
+            }
+            var max = 0;
+            for (var i = 0; i < arr2.length; i++) {
+                if( arr2[i] > max) {
+                    max = arr2[i];
+                }
+            }
+
+         // 如果有多个字符出现的次数相同，那么都输出出来
+            var index = arr2.indexOf(max);
+            while(index != -1) {
+                arr3.push(arr1[index]);
+                index = arr2.indexOf(max,index + 1);
+            }
+            return arr3;
+        }
+        var str1 = 'zhaozhiyong';
+        var arr = getStr(str1);
+        for (var i = 0; i <arr.length; i++) {
+            console.log(arr[i]);
+        }
+- 字符串操作方法
+  1. concat(str1,str2,str3...);   // 将连接两个或者多个字符串，等效于 + , + 更常用。  str.concat(str1);
+  2. substr(start, length);   // 从start 索引号开始，length 取的个数       str.substr(2,5);
+  3. slice(start,end);  // 从 start位置开始，截取到end位置，end取不到（start,end都是索引号哦）
+  4. substring(start,end); // 同上，索引不可取负值
+  5. replace('被替换的字符','替换为的字符');  // 替换字符   （它只会替换第一个与之匹配的字符）  str.replace('a','b');  
+  6. split('分隔符');    // str.split(' '); 
+  7. toUpperCase();  // 转换为大写
+  8. toLowerCase();  // 转换为小写
 
 
 
+# 12-简单数据类型和复杂数据类型
+
+### 12.1 简单数据类型与复杂数据类型
+
+> 简单数据类型又叫简单类型或者值类型
+>
+> 复杂类型又叫引用类型
+
+- 值类型：	简单数据类型/基本数据类型 ，在存储时变量中存储的是值本身，因此叫做值类型
+  - 如：string, number, boolean, undefined, null
+- 引用类型： 复杂数据类型， 在存储时变量中存储的仅仅是地址（引用）， 因此叫做引用数据类型， 通过new 关键字创建的对象（系统对象，自定义对象） 
+  - 如：Object， Array， Date等
+
+### 12.2 堆和栈
+
+> ​	堆栈空间分配区别：
+
+1. 栈（操作系统）： 由操作系统分配释放存放函数的参数值、局部变量的值等。其操作方式类似于数据结构中的栈；
+
+   **简单数据类型存放到栈里面**
+
+2. 堆（操作系统）：存储复杂类型（对象），一般由程序员分配释放，若程序员不释放，由垃圾回收机制回收
+
+   **复杂数据类型存放到堆里面**
+
+<!--JavaScript里面没有堆栈的概念-->
+
+### 12.3 数据类型的内存分配
+
+- 值类型（简单数据类型) ： string, number, boolean, undefined, null
+- 值类型变量的数据直接存放在变量（栈空间）中，
+- 简单数据类型 是存放到栈里面的  里面直接开辟一个内存空间  栈里面存放的是值。
 
 
+
+- 引用类型（复杂数据类型）: 通过new关键字创建的对象（系统对象、自定义对象），如： Object、 Date、 Array
+
+- 复杂数据类型  首先在栈里面存放地址  十六进制表示（系统自动分配）  然后这个地址指向堆里面的数据
+
+### 12.4 传参
+
+- 简单类型传参
+
+  > ​	函数的形参也可以看做是一个变量，当我们把一个值类型变量作为参数传给函数的形参时，其实是把变量在栈空间里的值复制了一份给形参，那么在方法内部对形参做任何修改，都不会影响到外部的变量。
+
+  <script>
+      var num = 10;
+      num = 20;
+      console.log(num)// 20
+
+      function fn(a) {
+          a++;
+          console.log(a);
+      }
+      var num1 = 10;
+      fn(num1);  // a = 11
+      console.log(num1);  // num1 = 10
+
+  </script>
+
+- 复杂类型传参
+
+  >函数的形式也可以看做是一个变量，当我们把引用类型变量传给形参时， 其实是把变量在栈空间里保存的堆地址复制给了形参，形参和实参其实保存的是同一个地址，做一操作的是同一个对象
+
+  <script>
+      function Person(name) {
+          this.name = name;
+      }
+      function f1(x) {
+          console.log(x.name);  // 刘德华
+          x.name = '张学友';
+          console.log(x.name); // 张学友
+      }
+      var p = new Person('刘德华');
+      console.log(p.name);	// 刘德华
+      f1(p);
+      console.log(p.name); // 张学友
+  </script>
+
+  
 
 
 
